More systems fleshed out
Asset system introduced, lots of refactoring, continuing to flesh out main loop.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,23 @@
 			],
 			"group": "build",
 			"label": "rust: cargo build"
+		},
+		// {
+		// 	"type": "cargo",
+		// 	"command": "build",
+		// 	"problemMatcher": [
+		// 		"$rustc"
+		// 	],
+		// 	"group": "build",
+		// 	"label": "rust: cargo build"
+		// },
+		{
+			"type": "cargo",
+			"command": "run",
+			"problemMatcher": [
+				"$rustc"
+			],
+			"label": "rust: cargo run"
 		}
 	]
 }
