--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-coffee = { version = "0.4", features = ["opengl"] }
+# coffee = { version = "0.4", features = ["opengl"] }
+ggez = "0.9.3"
+bevy_ecs = "0.12.0"
 serde = { version = "1.0.189", features = ["derive"] }
 erased-serde = "0.3"
 serde_json = "1"
