--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ erased-serde = "0.3"
 serde_json = "1"
 typetag = "0.2"
 dict = "0.1.5"
-# nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
+mint = "0.5.9"
+nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
