cant share info across threads, something has gone wrong

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,7 +40,9 @@
                 "run",
             ]
         },
-        "args": []
-    }
+        "args": [],
+        "env": {"RUST_BACKTRACE": "1"},
+    },
+
     ]
 }
