--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ typetag = "0.2"
 dict = "0.1.5"
 mint = "0.5.9"
 nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
+keycode = "0.4.0"
