--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,11 @@ dev.debug = "full"
 ggez = "0.9.3"
 bevy_ecs = "0.12.1"
 serde = { version = "1.0.189", features = ["derive"] }
-erased-serde = "0.4"
-serde_json = "1"
-typetag = "0.2"
+erased-serde = "0.4.0"
+serde_json = "1.0.0"
+typetag = "0.2.0"
 dict = "0.1.5"
 mint = "0.5.9"
 nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
 keycode = "0.4.0"
+lazy_static = "1.4.0"
