--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ enum-iterator = "1.4.1"
 strum = "0.25.0"
 strum_macros = "0.25.3"
 inquire = "0.6.2"
+clap = { version = "4.4.12", features = ["derive"] }
