working on a component parser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ strum = "0.25.0"
 strum_macros = "0.25.3"
 inquire = "0.6.2"
 clap = { version = "4.4.12", features = ["derive"] }
+syn = { version = "2.0.48", features = ["parsing", "full"] }
