--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -1,18 +1,13 @@
+[package]
+name = "engine"
+version = "0.1.0"
+edition = "2021"
 
-[workspace]
-resolver = "2"
-
-members = [
-    "game",
-    "engine",
-    "components"
-]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 
-[profile]
-dev.debug = "full"
 
-[workspace.dependencies]
+[dependencies]
 ggez = "0.9.3"
 bevy_ecs = "0.12.1"
 serde = { version = "1.0.189", features = ["derive"] }
