--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -11,3 +11,4 @@ ggez = "0.9.3"
 bevy_ecs = "0.12.1"
 mint = "0.5.9"
 nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
+serde.workspace = true
