--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 
 [dependencies]
 ggez = "0.9.3"
-bevy_ecs = "0.12.1"
+bevy_ecs = { version = "0.12.1", features = ["bevy_reflect"] }
 serde = { version = "1.0.189", features = ["derive"] }
 erased-serde = "0.4.0"
 serde_json = "1.0.0"
@@ -24,3 +24,4 @@ strum = "0.25.0"
 strum_macros = "0.25.3"
 inquire = "0.6.2"
 clap = { version = "4.4.12", features = ["derive"] }
+bevy-trait-query = "0.4.0"
