--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -25,3 +25,4 @@ strum_macros = "0.25.3"
 inquire = "0.6.2"
 clap = { version = "4.4.12", features = ["derive"] }
 bevy-trait-query = "0.4.0"
+bevy_reflect = { version = "0.12.1", features = ["documentation"] }
