THE TESTS PASS! It's finally done, for real this time.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,10 @@
             "cargo": {
                 "args": [
                     "run",
-                ]
+                    "--bin",
+                    "game"
+                ],
+
             },
             "args": [],
             "env": {"RUST_BACKTRACE": "1"},
