tidyd up some stuff, fixed a dependency issue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,48 @@
 {
 
     "files.exclude": {
+        "**/.git": false,
+        "**/.svn": false,
+        "**/.hg": false,
+        "**/CVS": false,
+        "**/.DS_Store": false,
+        "**/Thumbs.db": false,
+        ".config": false,
+        ".gitattributes": false,
+        ".gitignore": false,
+        ".vscode": false,
+        "**.csproj": false,
+        "**.sln": false,
+        "**/.gdignore": false,
+        "**/.godot": false,
+        "**/.vs": false,
+        "**/*.dll": false,
+        "**/*.dylib": false,
+        "**/*.exe": false,
+        "**/*.godot": false,
+        "**/*.import": false,
+        "**/*.meta": false,
+        "**/*.png": false,
+        "**/*.so": false,
+        "**/*.zip": false,
+        "icon.svg": false,
+        "Cargo.lock": false,
+        ".rustc_info.json": false,
+        "CACHEDIR.TAG": false,
+        "target/.rustc_info.json": false,
+        "target/CACHEDIR.TAG": false,
+        "**/CACHEDIR.TAG": false,
+        "**/.rustc_info.json": false,
+        "target/debug": false,
+        "archive": false,
+        "**/target": false,
+        "**/.vscode": false,
+        "README.md": false,
+        "**/Cargo.toml": false,
+        "**/Cargo.lock": false,
+        "**/.gitignore": false
+    },
+    "explorerExclude.backup": {
         "**/.git": true,
         "**/.svn": true,
         "**/.hg": true,
@@ -42,7 +84,6 @@
         "**/Cargo.lock": true,
         "**/.gitignore": true
     },
-    "explorerExclude.backup": {},
     "python.analysis.typeCheckingMode": "off",
     "python.analysis.autoImportCompletions": false,
     "rust-analyzer.showUnlinkedFileNotification": false,
