--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -12,7 +12,7 @@ publish = false
 
 
 [dependencies]
-ggez = "0.9.3"
-engine = {version = "0.1.0", path = "../engine"}
+ggez.workspace = true
 bevy_ecs.workspace = true
+engine = {version = "0.1.0", path = "../engine"}
 components = { version = "0.1.0", path = "../components" }
