--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -23,4 +23,5 @@ nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
 
 keycode = "0.4.0"
 enum-iterator = "1.4.1"
+once_cell = "1.19.0"
 
