--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -24,4 +24,5 @@ nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
 keycode = "0.4.0"
 enum-iterator = "1.4.1"
 once_cell = "1.19.0"
+log = "0.4.21"
 
