worked more on editor stuff, addcomponent is on the way :)

--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -13,3 +13,4 @@ mint = "0.5.9"
 nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
 serde.workspace = true
 bevy_reflect = "0.12.1"
+erased-serde = "0.4.4"
