--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ggez = "0.9.3"
+ggez = { version = "0.9.3", features = ["gilrs"] }
 bevy_ecs = { version = "0.12.1", features = ["bevy_reflect"] }
 bevy-trait-query = "0.4.0"
 bevy_reflect = { version = "0.12.1", features = ["documentation"] }
@@ -26,4 +26,5 @@ enum-iterator = "1.4.1"
 once_cell = "1.19.0"
 log = "0.4.21"
 libm = "0.2.8"
+gilrs = { version = "0.10.6", features = ["serde-serialize"] }
 
