--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy_ecs.workspace = true
+bevy-trait-query.workspace = true
+bevy_reflect.workspace = true
 engine = {version = "0.1.0", path = "../engine"}
 ggez = "0.9.3"
-bevy_ecs = "0.12.1"
-mint = "0.5.9"
+mint.workspace = true 
 nalgebra = { version = "0.32.3", features = ["serde-serialize", "mint"] }
 serde.workspace = true
-bevy_reflect = "0.12.1"
 erased-serde = "0.4.4"
 log = "0.4.21"
