--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 ggez = { version = "0.9.3", features = ["gilrs"] }
-bevy_ecs = { version = "0.12.1", features = ["bevy_reflect"] }
-bevy-trait-query = "0.4.0"
-bevy_reflect = { version = "0.12.1", features = ["documentation"] }
+bevy_ecs.workspace = true
+bevy-trait-query.workspace = true
+bevy_reflect.workspace = true
 
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.0"
@@ -22,7 +22,6 @@ mint = "0.5.9"
 nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
 
 keycode = "0.4.0"
-enum-iterator = "1.4.1"
 once_cell = "1.19.0"
 log = "0.4.21"
 libm = "0.2.8"
