implementing egui into the editor! :D

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,7 +38,7 @@
                 "args": [
                     "run",
                     "--bin",
-                    "game"
+                    "editor"
                 ],
 
             },
