--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bevy-trait-query.workspace = true
 bevy_ecs.workspace = true
 bevy_reflect.workspace = true
+bevy_utils = "0.13.2"
 components = { version = "0.1.0", path = "../components" }
 egui = "0.26.2" # uses 0.26 since 0.27 has breaking changes that ggegui 0.4.0 hasn't fixed
 egui_dock = {version = "0.11.4"} # requires egui 0.26
