--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -3,6 +3,9 @@ name = "engine"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+editor_features = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -26,4 +29,5 @@ once_cell = "1.19.0"
 log = "0.4.21"
 libm = "0.2.8"
 gilrs = { version = "0.10.6", features = ["serde-serialize"] }
+egui = "0.26.2"
 
