--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ bevy_reflect = "0.13.1"
 bevy-trait-query = "0.5.1"
 serde = { version = "1.0.189", features = ["derive"] }
 erased-serde = "0.4.0"
+egui = "0.26.2"
 serde_json = "1.0.0"
 typetag = "0.2.0"
 dict = "0.1.5"
