--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -16,3 +16,4 @@ nalgebra = { version = "0.32.3", features = ["serde-serialize", "mint"] }
 serde.workspace = true
 erased-serde = "0.4.4"
 log = "0.4.21"
+egui.workspace = true
