--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -13,6 +13,8 @@ ggez = { version = "0.9.3", features = ["gilrs"] }
 bevy_ecs.workspace = true
 bevy-trait-query.workspace = true
 bevy_reflect.workspace = true
+egui.workspace = true
+egui_dock.workspace = true
 
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.0"
@@ -29,5 +31,3 @@ once_cell = "1.19.0"
 log = "0.4.21"
 libm = "0.2.8"
 gilrs = { version = "0.10.6", features = ["serde-serialize"] }
-egui = "0.26.2"
-
