--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -20,4 +20,5 @@ ggegui = {version = "0.4.0", path = '..\..\ggegui'} # using a custom implementat
 ggez.workspace = true
 inquire.workspace = true
 log = "0.4.21"
+rfd = "0.14.1"
 serde_json.workspace = true
