--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -21,4 +21,5 @@ ggez.workspace = true
 inquire.workspace = true
 log = "0.4.21"
 rfd = "0.14.1"
+serde.workspace = true
 serde_json.workspace = true
