sweeping changes, moving tmg to its own package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 [workspace]
 resolver = "2"
 
-members = ["game", "engine", "components", "editor", "playground"]
+members = ["game", "engine", "components", "editor", "playground", "theo_matthew_game"]
 
 
 [profile]
