refactored, fixing color picker

--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -10,13 +10,17 @@ bevy-trait-query.workspace = true
 bevy_ecs.workspace = true
 bevy_reflect = { workspace = true, features = ["documentation"] }
 bevy_utils = "0.13.2"
-components = { version = "0.1.0", path = "../components" }
+components = { version = "0.1.0", path = "../components", features = [
+    "editor_features",
+] }
 convert_case = "0.6.0"
 egui = "0.26.2" # uses 0.26 since 0.27 has breaking changes that ggegui 0.4.0 hasn't fixed
-egui_dock = {version = "0.11.4"} # requires egui 0.26
-engine = { version = "0.1.0", path = "../engine", features = ["editor_features"] }
+egui_dock = { version = "0.11.4" } # requires egui 0.26
+engine = { version = "0.1.0", path = "../engine", features = [
+    "editor_features",
+] }
 game = { version = "0.1.0", path = "../game" }
-ggegui = {version = "0.4.0", path = '..\..\ggegui'} # using a custom implementation at the moment. don't mind.
+ggegui = { version = "0.4.0", path = '..\..\ggegui' } # using a custom implementation at the moment. don't mind.
 ggez.workspace = true
 inquire.workspace = true
 log = "0.4.21"
