--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -3,15 +3,18 @@ name = "components"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+editor_features = []
 
 [dependencies]
 bevy_ecs.workspace = true
 bevy-trait-query.workspace = true
 bevy_reflect.workspace = true
-engine = {version = "0.1.0", path = "../engine"}
+engine = { version = "0.1.0", path = "../engine", features = [
+    "editor_features",
+] }
 ggez = "0.9.3"
-mint.workspace = true 
+mint.workspace = true
 nalgebra = { version = "0.32.3", features = ["serde-serialize", "mint"] }
 serde.workspace = true
 erased-serde = "0.4.4"
