matthewgame update: now text examples :D

--- a/theo_matthew_game/Cargo.toml
+++ b/theo_matthew_game/Cargo.toml
@@ -14,6 +14,8 @@ bevy_ecs.workspace = true
 components = { version = "0.1.0", path = "../components" }
 log = "0.4.21"
 editor = { version = "0.1.0", path = "../editor" }
+serde.workspace = true
+bevy_reflect.workspace = true
 
 
 [[bin]]
